# syslens

./: pyproject.toml
src/syslens/: __main__.py  cli.py
src/syslens/network/: cli.py  info.py
src/syslens/system/: cli.py  info.py  resources.py
tests/: test_cli.py  test_resources.py  test_system_info.py
